--- a/project.json
+++ b/project.json
@@ -3,7 +3,7 @@
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "./src",
-  "prefix": "ui-application",
+  "prefix": "common-ui",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
