--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@login-page": ["modules/login/src/index.ts"],
       "@shared/ui": ["modules/shared/ui/src/index.ts"]
     }
   },
