--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "@carbon/icons": "^11.26.0",
     "@nrwl/angular": "15.8.0",
+    "carbon-components": "^10.58.10",
+    "carbon-components-angular": "^5.14.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
